<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/foodbacknew"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".GoogleSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/google_identity"
            android:textColor="@color/contrasting"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/android_sign_in_with_google"
            android:textColor="@color/contrasting"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todoS"
            app:srcCompat="@drawable/logogoogle" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            app:buttonSize="wide"
            app:colorScheme="dark"></com.google.android.gms.common.SignInButton>

        <CheckBox
            android:id="@+id/remember2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/keep_me_signed_in"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/signout"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>