<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragLeft">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#90FFFFFF"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#90FFFFFF"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="114dp">

                    <TextView
                        android:id="@+id/zz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        android:text="@string/order_details"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/invoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/mobile_no"
                        android:textColor="@color/secondaryDarkColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/nameuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/textview2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/zzzz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/total_tiffins"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/invoice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/latest_active_order_tiffins"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lefttiffin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>