<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tempback"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".DecisionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todoS"
            app:srcCompat="@drawable/newlogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/place_a_new_order"
            android:textColor="@android:color/white"
            android:textSize="@dimen/generaltext" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal|fill_vertical"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>